<resources>
    <string name="app_name">TrackMyStock</string>

    <!-- Activity titles -->
    <string name="title_editor">Edit Product</string>
    <string name="title_details">Product Details</string>
    <string name="title_add">Add Product</string>

    <!-- Menu options -->
    <string name="action_edit">Edit Product</string>
    <string name="action_save">Save Product</string>
    <string name="action_delete_product">Delete Product</string>
    <string name="action_delete_all_products">Delete All Products</string>
    <string name="action_insert_dummy">Insert Dummy Data</string>

    <!-- Button lables -->
    <string name="button_label_sold">Sold 1</string>
    <string name="button_label_minus">-</string>
    <string name="button_label_plus">+</string>
    <string name="button_label_order">Order from supplier in e-mail</string>

    <!-- Empty view statement -->
    <string name="empty_view_state">Click on the button and start adding your products!</string>

    <!-- Placeholder texts -->
    <string name="placeholder_product_number">0</string>
    <string name="product_in_stock">In Stock</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_price">0.00</string>
    <string name="hint_quantity">1</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_email">Email</string>
    <string name="hint_supplier_phone">Phone (e.g. +36 20 111 1111)</string>

    <!-- Subtitles -->
    <string name="sub_product_price">Price</string>
    <string name="sub_current_stock">Current Stock</string>
    <string name="sub_supplier">Supplier Information</string>

    <!-- Various -->
    <string name="currency">€</string>

    <string name="dummy_image_uri">android.resource://com.example.android.a11_trackmystock/drawable/empty_view</string>

    <!-- Dialogs -->
    <string name="dialog_message_delete_all">Are you sure you want to delete all products listed? You cannot undo this action.</string>
    <string name="dialog_reply_delete_all">Delete all products</string>
    <string name="dialog_message_delete">Are you sure you want to delete this product? You cannot undo this action.</string>
    <string name="dialog_reply_delete">Delete product</string>
    <string name="dialog_reply_cancel">Cancel</string>

    <string name="dialog_message_unsaved">Are you sure you want to quit without saving changes? </string>
    <string name="dialog_reply_discard">Discard changes</string>
    <string name="dialog_reply_keep_editing">Keep editing</string>

    <!-- Toast messages -->
    <string name="toast_error_quantity">Quantity cannot be less than 0.</string>

    <string name="toast_confirm_insert">Product added successfully.</string>
    <string name="toast_error_insert">Product record could not be saved.</string>

    <string name="toast_confirm_update">Product updated successfully.</string>
    <string name="toast_error_update">Error with updating product.</string>

    <string name="toast_confirm_delete_all">All products have been deleted.</string>
    <string name="toast_error_delete_all">Failed to delete all products.</string>

    <!-- Exception logs -->
    <string name="exception_unknown_uri">URI provided is unknown, and cannot be queried.</string>
    <string name="exception_invalid_name">Product name is invalid</string>
    <string name="exception_invalid_image">Product image is invalid</string>
    <string name="exception_invalid_price">Price is invalid</string>
    <string name="exception_invalid_quantity">Current stock quantity is invalid</string>
    <string name="exception_invalid_supplier_name">Supplier name is invalid</string>
    <string name="exception_invalid_supplier_email">Supplier email is invalid</string>
    <string name="exception_invalid_supplier_phone">Supplier phone is invalid</string>

    <string name="log_error_insert">Failed to insert the record => %s</string>




</resources>
