<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ToolbarTheme"
        android:theme="@style/ToolbarTheme"></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/product_image_placeholder" />

            </RelativeLayout>

            <TextView
                android:id="@+id/product_name"
                style="@style/ProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_product_name_margin"
                android:hint="@string/hint_product_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Editor_Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sub_product_price" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/edit_price_padding"
                        android:paddingRight="@dimen/edit_price_padding"
                        android:paddingTop="@dimen/price_paddingTop">

                        <TextView
                            android:id="@+id/product_price"
                            style="@style/Details_Price"
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/hint_price"
                            android:textSize="@dimen/price_textSize" />

                        <TextView
                            android:id="@+id/currency"
                            style="@style/Currency"
                            android:text="@string/currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_Stock"
                        style="@style/Editor_Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sub_current_stock" />

                    <TextView
                        android:id="@+id/product_quantity"
                        style="@style/Quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/placeholder_product_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_minus"
                            android:layout_width="@dimen/square_button_size"
                            android:layout_height="@dimen/square_button_size"
                            android:text="@string/button_label_minus" />

                        <EditText
                            android:id="@+id/edit_quantity_by"
                            android:layout_width="@dimen/square_button_size"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/hint_quantity"
                            android:inputType="number"
                            android:maxLength="4" />

                        <Button
                            android:id="@+id/button_plus"
                            android:layout_width="@dimen/square_button_size"
                            android:layout_height="@dimen/square_button_size"
                            android:text="@string/button_label_plus" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_product_name_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/Supplier_Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_supplier" />

                <TextView
                    android:id="@+id/supplier_name"
                    style="@style/Details_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_name" />

                <TextView
                    android:id="@+id/supplier_email"
                    style="@style/Details_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_email" />

                <TextView
                    android:id="@+id/supplier_phone"
                    style="@style/Details_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_phone" />

                <Button
                    android:id="@+id/button_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/button_label_order"
                    android:textColor="@color/colorLight" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>