<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_editor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ToolbarTheme"
        android:theme="@style/ToolbarTheme"></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/edit_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/product_image_placeholder" />

                <ImageView
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/round_button_bgrd"
                    android:padding="@dimen/round_button_padding"
                    android:src="@drawable/ic_add_image_white" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/Editor_TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_product_name_margin"
                android:hint="@string/hint_product_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Editor_Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sub_product_price" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/edit_price_padding"
                        android:paddingRight="@dimen/edit_price_padding">

                        <EditText
                            android:id="@+id/edit_price"
                            style="@style/Editor_Price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/hint_price" />

                        <TextView
                            android:id="@+id/currency"
                            style="@style/Currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/currency" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/Editor_Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sub_current_stock" />

                    <EditText
                        android:id="@+id/edit_quantity"
                        style="@style/Editor_Quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/placeholder_product_number" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_product_name_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/Supplier_Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_supplier" />

                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/Editor_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_name" />

                <EditText
                    android:id="@+id/edit_supplier_email"
                    style="@style/Editor_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_email" />

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/Editor_TextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_phone" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>